updated the navbar to be fixed to the top on scroll and added body padding to ensure no overlap of content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 body {
   background-color: #5b5b5b;
+  padding-top: 100px;
 }
 
